syntax = "proto3";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "ninja.sundry.core.grpc";
option java_outer_classname = "FinancialProto";

service FinancialProductService {
    rpc GetFinancialProducts(FinancialProductGrpcRequest) returns (FinancialProductGrpcResponse);
}

message FinancialProductGrpcRequest {
    optional string financialGroupType = 1;
    optional string companyName = 2;
    optional string joinRestriction = 3;
    optional string financialProductType = 4;
    optional string financialProductName = 5;
    optional string depositPeriodMonths = 6;
    optional int32 page = 7;
    optional int32 size = 8;
}

message FinancialProductGrpcResponse {
    repeated FinancialProductGrpc content = 1;
    int32 size = 2;
    int32 number = 3;
    int32 numberOfElements = 4;
    bool first = 5;
    bool last = 6;
}

message FinancialProductGrpc {
    int64 financialProductId = 1;
    string financialProductName = 2;
    string joinWay = 3;
    google.protobuf.StringValue postMaturityInterestRate = 4;
    google.protobuf.StringValue specialCondition = 5;
    string joinRestriction = 6;
    string financialProductType = 7;
    string joinMember = 8;
    string additionalNotes = 9;
    google.protobuf.Int64Value maxLimit = 10;
    google.protobuf.StringValue dclsMonth = 11;
    google.protobuf.StringValue dclsStartDay = 12;
    google.protobuf.StringValue dclsEndDay = 13;
    FinancialCompanyGrpc financialCompany = 14;
    repeated FinancialProductOptionGrpc financialProductOptions = 15;
}

message FinancialCompanyGrpc {
    string dclsMonth = 1;
    string companyName = 2;
    google.protobuf.StringValue dclsChrgMan = 3;
    google.protobuf.StringValue hompUrl = 4;
    google.protobuf.StringValue calTel = 5;
    string financialGroupType = 6;
}

message FinancialProductOptionGrpc {
    string interestRateType = 1;
    google.protobuf.StringValue reserveType = 2;
    string depositPeriodMonths = 3;
    google.protobuf.DoubleValue baseInterestRate = 4;
    google.protobuf.DoubleValue maximumInterestRate = 5;
}
